DOC: Improved support for a table cell shading color set to cvAuto.

* Looking for the base color of the paragraph or for a built-in style
  in the styles hierarchy with a font color not set to cvAuto.

TODO: Not sure which background color to provide.  Test files required!

BUG:275292